k8s-yaml-files/jasmin.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jasmin
  labels:
    app: jasmin
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jasmin
  podManagementPolicy: "Parallel"
  template:
    metadata:
      labels:
        app: jasmin
    spec:
      containers:
        - name: jasmin
          image: jookies/jasmin:latest
          ports:
            - containerPort: 2775
              name: smpp-port
            - containerPort: 1401
              name: http-port
            - containerPort: 8990
              name: cli-port
          command: ["jasmind.py", "--enable-interceptor-client", "-u", "jcliadmin", "-p", "jclipwd"]
          lifecycle:
            postStart:
              exec:
                command: [ "sh", "-c", "cp /tmp/config/* /etc/jasmin/" ]
          volumeMounts:
            - name: jasmin-config
              mountPath: /tmp/config
            - name: jasmin-data
              mountPath: /etc/jasmin/store
            - name: jasmin-logs
              mountPath: /var/log/jasmin
        - name: interceptord-sidecar
          image: jookies/jasmin:latest
          command: ["interceptord.py"]
          lifecycle:
            postStart:
              exec:
                command: [ "sh", "-c", "cp /tmp/config/* /etc/jasmin/" ]
          volumeMounts:
            - name: interceptor-config
              mountPath: /tmp/config
        - name: dlrlookupd-sidecar
          image: jookies/jasmin:latest
          command: ["dlrlookupd.py"]
          lifecycle:
            postStart:
              exec:
                command: [ "sh", "-c", "cp /tmp/config/* /etc/jasmin/" ]
          volumeMounts:
            - name: dlrlookupd-config
              mountPath: /tmp/config
        - name: dlrd-sidecar
          image: jookies/jasmin:latest
          command: ["dlrd.py"]
          lifecycle:
            postStart:
              exec:
                command: [ "sh", "-c", "cp /tmp/config/* /etc/jasmin/" ]
          volumeMounts:
            - name: dlr-config
              mountPath: /tmp/config
      volumes:
        - name: jasmin-config
          configMap:
            name: etc-jasmin
        - name: jasmin-data
          persistentVolumeClaim:
            claimName: jasmin-data-pvc
        - name: interceptor-config
          configMap:
            name: etc-interceptor
        - name: dlrlookupd-config
          configMap:
            name: etc-dlrlookupd
        - name: dlr-config
          configMap:
            name: etc-dlr
        - name: jasmin-logs
          persistentVolumeClaim:
            claimName: jasmin-logs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: jasmin-cli
  annotations:
    metallb.universe.tf/address-pool: management-network
spec:
  type: LoadBalancer
  selector:
    app: jasmin
  ports:
  - protocol: TCP
    port: 8990
    targetPort: 8990
---
apiVersion: v1
kind: Service
metadata:
  name: jasmin-smpp-api
  annotations:
    metallb.universe.tf/address-pool: management-network
spec:
  type: LoadBalancer
  selector:
    app: jasmin
  ports:
  - protocol: TCP
    port: 2775
    targetPort: 2775
---
apiVersion: v1
kind: Service
metadata:
  name: jasmin-http-api
  annotations:
    metallb.universe.tf/address-pool: management-network
spec:
  type: LoadBalancer
  selector:
    app: jasmin
  ports:
  - protocol: TCP
    port: 1401
    targetPort: 1401
