k8s-yaml-files/observability.yml
apiVersion: v1
kind: Pod
metadata:
  name: grafana
  labels:
    name: grafana
spec:
  securityContext:
    fsGroup: 472
    runAsUser: 0
    supplementalGroups:
      - 0
  containers:
    - name: grafana
      image: grafana/grafana:latest
      ports:
        - containerPort: 3000
          name: http-grafana
          protocol: TCP
      volumeMounts:
        - name: provisioning-ds-prometheus
          mountPath: /etc/grafana/provisioning/datasources
        - name: provisioning-dashboards
          mountPath: /etc/grafana/provisioning/dashboards
        - name: dashboards
          mountPath: /opt/grafana-dashboards
        - name: grafana-data
          mountPath: /var/lib/grafana
  volumes:
    - name: provisioning-ds-prometheus
      configMap:
        name: provisioning-ds-prometheus
    - name: provisioning-dashboards
      configMap:
        name: provisioning-dashboards
    - name: dashboards
      emptyDir: {}
    - name: grafana-data
      persistentVolumeClaim:
        claimName: grafana-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  annotations:
    metallb.universe.tf/address-pool: grafana
spec:
  type: LoadBalancer
  selector:
    name: grafana
  ports:
  - protocol: TCP
    port: 80
    targetPort: http-grafana
---
apiVersion: v1
kind: Pod
metadata:
  name: prometheus
  labels:
    name: prometheus
spec:
  containers:
    - name: prometheus
      image: prom/prometheus:latest
      args:
        - --config.file=/etc/prometheus/prometheus.yml
        - '--storage.tsdb.path=/prometheus'
        - '--web.console.libraries=/etc/prometheus/console_libraries'
        - '--web.console.templates=/etc/prometheus/consoles'
        - '--web.enable-lifecycle'
      ports:
        - containerPort: 9090
          name: prometheus-port
          protocol: TCP
      volumeMounts:
        - name: etcprom
          mountPath: /etc/prometheus
        - name: dataprom
          mountPath: /prometheus
  volumes:
    - name: etcprom
      configMap:
        name: promconf
    - name: dataprom
      persistentVolumeClaim:
        claimName: prometheus-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  selector:
    name: prometheus
  clusterIP: None
