k8s-yaml-files/rabbitmq.yml
apiVersion: v1
kind: Pod
metadata:
  name: rabbit
  labels:
    name: rabbit
spec:
  hostname: rabbit
  containers:
  - name: rabbit
    image: rabbitmq:latest
    volumeMounts:
      - name: etcrabbit
        mountPath: /etc/rabbitmq/conf.d
  volumes:
    - name: etcrabbit
      configMap:
        name: rabbit-conf
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-broker
spec:
  selector:
    name: rabbit
  clusterIP: None
