k8s-yaml-files/redis.yml
apiVersion: v1
kind: Pod
metadata:
  name: redis
  labels:
    name: redis
spec:
  hostname: redis
  containers:
  - name: redis
    image: redis:latest
    command:
      - redis-server
      - "/etc/redis/redis.conf"
    volumeMounts:
    - mountPath: /etc/redis/
      name: redisconfig
  volumes:
    - name: redisconfig
      configMap:
        name: etcredis
---
apiVersion: v1
kind: Service
metadata:
  name: redis-server
spec:
  selector:
    name: redis
  clusterIP: None
